projects/vb6parse/snapshots/parsers/cst/filesystem/setattr/setattr_with_concatenation.snap
---
source: projects/vb6parse/tests/filesystem/setattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SetAttrStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SetAttrKeyword
                  text: SetAttr
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"C:\\Data\\\""
                        - kind: Whitespace
                          text: " "
                        - kind: Ampersand
                          text: "&"
                        - kind: Whitespace
                          text: " "
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: fileName
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\".txt\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: vbHidden
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
